<resources>
    <string name="app_name">RajaPay</string>
    <string name="default_notification_channel_id">Transaction Status</string>
    <string name="msg_token_fmt" formatted="true">Notifikasi : %s</string>
    <string name="next_label">Lanjut</string>
    <string name="forgot_password_label">Lupa Password</string>
    <string name="previous_label">Sebelumnya</string>
    <string name="skip_label">Lewati</string>
    <string name="balance_label">Saldo</string>
    <string name="point_label">Poin</string>
    <string name="reward_list">Daftar Hadiah</string>
    <string name="reward_history">Reward History</string>
    <string name="point_title">Nama Poin</string>
    <string name="point_description">Kejar transaksimu hingga capai 2.000 poin. Raih bonus Rp. 100.000 di akun RajaPay kamu.</string>
    <string name="redeem">Redeem</string>
    <string name="redeem_in_progress">Diproses</string>
    <string name="redeem_confirm_label">Apakah anda yakin untuk menukar poin anda dengan "#"?</string>
    <string name="point_amount">2.000</string>
    <string name="reward_empty_subtitle">Hadiah untuk penukaran poin belum tersedia.</string>
    <string name="reward_history_empty_subtitle">Silahkan tukar poin anda dengan hadiah menarik kami</string>
    <string name="scan_label">Scan</string>
    <string name="top_up_1_label">Top Up</string>
    <string name="transfer_label">Transfer</string>
    <string name="please_wait_label">Mohon Tunggu</string>
    <string name="buy_coupon">Beli Kupon</string>
    <string name="use_coupon">Gunakan Kupon</string>
    <string name="my_coupon">Kupon Saya</string>
    <string name="coupon_available">Kupon Tersedia</string>
    <string name="monthly_target_label">Target Bulan Ini</string>
    <string name="monthly_target_left"> Transaksi Lagi ></string>
    <string name="prepaid_label">Prabayar</string>
    <string name="postpaid_label">Pascabayar</string>
    <string name="signup_label">Daftar</string>
    <string name="cancel_label">Batal</string>
    <string name="ok_label">OK</string>
    <string name="trouble_label">*Gangguan</string>
    <string name="yes_label">Ya</string>
    <string name="no_label">Tidak</string>
    <string name="today_label">Hari ini</string>
    <string name="name_label">Nama</string>
    <string name="power_label">Tarif / Daya</string>
    <string name="signin_label">Masuk</string>
    <string name="copy_label">Salin</string>
    <string name="take_image_label">Ambil Gambar</string>
    <string name="news_label">Berita</string>
    <string name="info_label">Info:</string>
    <string name="titik_dua">:</string>
    <string name="ticket_label">Tiket</string>
    <string name="deposit_label">Rajapay Deposit</string>
    <string name="va_label">Virtual Account</string>
    <string name="bank_transfer_label">Bank Transfer</string>
    <string name="qris_label">QRIS</string>
    <string name="alfamart_label">Gerai Retail</string>
    <string name="total_price_label">Total Harga</string>
    <string name="price_label">Harga</string>
    <string name="price_dash_label">Harga :</string>
    <string name="bill_detail_label">Rinci Tagihan</string>
    <string name="use_label">Gunakan</string>
    <string name="admin_cost_label">Biaya Admin</string>
    <string name="fine_label">Denda</string>
    <string name="other_bill_label">Tagihan Lain</string>
    <string name="top_up_label">Top Up Saldo</string>
    <string name="back_to_home_label">Kembali ke beranda</string>
    <string name="change_now_label">Ubah Sekarang</string>
    <string name="phone_no_label">Nomor Handphone</string>
    <string name="send_now_label">Kirim</string>
    <string name="back_label">Kembali</string>
    <string name="share_label">Bagikan</string>
    <string name="done_label">Selesai</string>
    <string name="save_label">Simpan</string>
    <string name="find_order_label">Cari Pesanan</string>
    <string name="find_pdam_label">Cari Area PDAM</string>
    <string name="example_label">Contoh</string>
    <string name="check_bill_label">Cek Tagihan</string>
    <string name="understood_label">Mengerti</string>
    <string name="transaction_label">Transaksi</string>
    <string name="deposit_mutation_label">Mutasi Deposit</string>
    <string name="term_condition_label">Syarat dan Ketentuan</string>
    <string name="use_coupon_label">PAKAI KUPON</string>
    <string name="buy_now_label">BAYAR SEKARANG</string>
    <string name="start_transaction_label">Mulai Transaksi Sekarang</string>
    <string name="copied_clipboard_label">Tersalin ke sistem</string>
    <string name="do_not_have_account_label">Belum punya akun?</string>
    <string name="have_account_label">Sudah punya akun?</string>
    <string name="contact_us_label">Hubungi\nKami</string>
    <string name="delete_all_label">Hapus Semua</string>
    <string name="valid_until_label">Berlaku hingga</string>
    <string name="edit_name_enter_password">Masukan Password Anda</string>
    <string name="television_label">Televisi</string>
    <string name="change_image_label">Ganti Gambar</string>
    <string name="no_data_available">Tidak ada data tersedia</string>
    <string name="no_title_available">Tidak ada judul tersedia</string>
    <string name="no_time_available">Tidak ada keterangan waktu tersedia</string>
    <string name="no_data_default">-</string>
    <string name="gmail_label">Gmail</string>
    <string name="bluetooth_label">Bluetooth</string>
    <string name="note_label">Note</string>
    <string name="maps_label">Maps</string>
    <string name="facebook_label">Facebook</string>
    <string name="drive_label">Google Drive</string>
    <string name="inactive_click_label">Layanan ini sedang tidak aktif</string>
    <string name="data_not_found">Data not found</string>
    <string name="refid_not_found">Ref ID tidak ditemukan</string>
    <string name="trouble_click_label">Layanan ini mengalami gangguan</string>
    <string name="provider_trouble_click_label">Provider ini mengalami gangguan</string>
    <string name="coupon_min_transaction_prevent">Nilai transaksi anda belum memenuhi minimum transaksi untuk menggunakan kupon ini</string>
    <string name="information_version_app">Aplikasi RAJAPAY Versi</string>
    <string name="forget_password_modal_title">Lupa Password</string>
    <string name="forget_password_modal_subtitle">Masukan No Telp</string>
    <string name="main_menu_enter_amount_modal_title">Nominal Pembayaran</string>
    <string name="main_menu_enter_amount_modal_subtitle">Masukan jumlah yang ingin dibayarkan</string>
    <string name="main_menu_enter_amount_modal_empty_amount">Jumlah bayar kosong</string>
    <string name="main_menu_enter_amount_modal_amount_below_min">Jumlah bayar lebih rendah dari minimum pembayaran</string>
    <string name="main_menu_enter_amount_modal_amount_above_max">Jumlah bayar lebih tinggi dari maksimum pembayaran</string>
    <string name="activity_title_top_up_deposit">Isi Deposit</string>
    <string name="activity_title_transaction">Transaksi</string>
    <string name="activity_title_detail_transaction">Detail Transaksi</string>
    <string name="activity_title_coupon_code">Pakai Kupon</string>
    <string name="activity_title_how_to_pay">Cara Bayar</string>
    <string name="activity_title_inbox">Kotak Masuk</string>
    <string name="activity_title_notif_detail">Detail Notifikasi</string>
    <string name="activity_title_choose_trouble_transaction">Pilih Transaksi Bermasalah</string>
    <string name="activity_title_trouble_transaction">Kendala Transaksi</string>
    <string name="activity_title_confirmation">Konfirmasi</string>
    <string name="activity_title_price_list">Daftar Harga</string>
    <string name="activity_title_save_pdf">Simpan PDF</string>
    <string name="activity_title_print">Cetak Bluetooth</string>
    <string name="activity_title_confirmation_bill">Konfirmasi Tampilan Struk</string>
    <string name="activity_title_report_detail">Detail Laporan</string>
    <string name="activity_title_upgrade_detail">Detail Upgrade Akun</string>
    <string name="activity_title_password_verification">Verifikasi Password</string>
    <string name="activity_title_otp_change_email">OTP Ubah Email</string>
    <string name="activity_title_new_password">Atur Password Baru</string>
    <string name="activity_title_manage_account">Atur Akun</string>
    <string name="activity_title_verify_new_pin">Verifikasi PIN Baru</string>
    <string name="activity_title_verify_otp">Verifikasi OTP</string>
    <string name="activity_title_basic_verify">Verifikasi Dasar</string>
    <string name="activity_title_photo_and_id_card">NIK &amp; Foto KTP</string>
    <string name="activity_title_selfie">Foto Selfie</string>
    <string name="activity_title_signature">Foto Tanda Tangan + KTP</string>
    <string name="activity_title_manage_nominal">Atur Nominal</string>
    <string name="activity_title_news">Berita Tagih Dana</string>
    <string name="activity_title_payment_pin">PIN Pembayaran</string>
    <string name="phone_empty_label">No telpon kosong</string>
    <string name="password_empty_label">Password kosong</string>
    <string name="confirm_password_empty_label">Konfirmasi password kosong</string>
    <string name="password_condition_not_met_label">Password tidak memenuhi syarat</string>
    <string name="otp_empty_label">Kode OTP kosong</string>
    <string name="otp_not_satisfied_label">Kode OTP kurang dari 6 karakter</string>
    <string name="password_not_same_confirm_label">Password tidak sama dengan konfirmasi password</string>
    <string name="onboard_1_title">Jual Pulsa Termurah Dan Bayar Tagihan Dengan Mudah</string>
    <string name="home_product_closed_title">Product Closed!!!</string>
    <string name="home_product_closed_detail">Silahkan hubungi CS untuk fitur ini</string>
    <string name="home_product_closed_action_1">TUTUP</string>
    <string name="pay_bank_transfer_confirmation_title">Konfirmasi Pembayaran</string>
    <string name="pay_bank_transfer_confirmation_detail">Apabila menekan tombol <b>KONFIRMASI PEMBAYARAN</b> tapi <b>belum melakukan pelunasan</b> maka transaksi ini akan tetap <b>MENUNGGU</b>. Bayar tepat hingga <b>TIGA (3) DIGIT</b> terakhir untuk mempermudah proses konfirmasi.</string>
    <string name="payment_success_title">Transaksi Berhasil</string>
    <string name="payment_success_subtitle">Transaksi anda berhasil. Anda dapat melihat transaksi pada pesanan</string>
    <string name="payment_success_print">Cetak &amp; catat transaksi</string>
    <string name="add_coupon_confirmation_title">Gunakan Kupon</string>
    <string name="add_coupon_confirmation_detail">akan digunakan pada transaksi anda</string>
    <string name="add_coupon_confirmation_use">Gunakan</string>
    <string name="add_coupon_confirmation_later">Nanti Saja</string>
    <string name="cashier_manage_sell_price">Atur Harga Jual</string>
    <string name="cashier_manage_sell_price_choose_product_app_price">Harga Rajapay</string>
    <string name="cashier_manage_sell_price_choose_product_price">Harga Jual</string>
    <string name="account_logout_title">Keluar Akun</string>
    <string name="account_pin_title">Pengaturan PIN dibutuhkan</string>
    <string name="account_your_qr_scan_confirm_title_modal">Konfirmasi</string>
    <string name="account_your_qr_scan_confirm_subtitle_modal">Anda akan mengirim %1$s untuk %2$s.
        Apakah anda ingin melanjutkan proses ini?</string>
    <string name="account_logout_subtitle">Anda yakin untuk keluar sekarang?</string>
    <string name="account_pin_subtitle">Aplikasi Rajapay membutuhkan PIN dalam setiap transaksi. Anda belum mengatur PIN. Lakukan pengaturan PIN sekarang</string>
    <string name="account_logout_yes">Ya, Keluar Sekarang</string>
    <string name="account_pin_yes">Ya, Atur Sekarang</string>
    <string name="choose_media_title">Choose Media</string>
    <string name="choose_media_camera">Camera</string>
    <string name="choose_media_gallery">Gallery</string>
</resources>