<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/two_x">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/four_x"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/account_your_qr_scan_confirm_title_modal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/one_x"
        android:background="@color/disabled"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/four_x"
        android:gravity="center"
        android:id="@+id/info"
        android:text="@string/account_your_qr_scan_confirm_subtitle_modal"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/two_x"
        android:id="@+id/submit"
        android:text="@string/next_label"/>
</LinearLayout>