<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_modal"
    android:paddingHorizontal="@dimen/two_x"
    android:paddingVertical="@dimen/one_x"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/one_x"
        android:orientation="vertical">
        <ImageView
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:maxHeight="@dimen/image_product_closed_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two_x"
            android:src="@drawable/ic_illustrasi_kode_kuponhdpi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_product_closed_title"
            android:textSize="@dimen/h2"
            android:textColor="@color/danger"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="@dimen/two_x"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h4"
            android:text="@string/home_product_closed_detail"
            android:gravity="center"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/close"
            android:textSize="@dimen/six_x"
            android:text="@string/home_product_closed_action_1"
            android:layout_marginTop="@dimen/one_x"
            android:layout_marginBottom="@dimen/one_x"/>
    </LinearLayout>
</LinearLayout>