<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/two_x">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/four_x"
        android:gravity="center"
        android:text="@string/main_menu_enter_amount_modal_subtitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_no_layout"
        android:layout_marginTop="@dimen/two_x"
        android:paddingHorizontal="@dimen/two_x"
        android:paddingVertical="@dimen/one_x">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/one_x"
            android:layout_weight="1"
            android:background="#fff"
            android:inputType="number"
            android:id="@+id/amount"
            android:hint="Jumlah Bayar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/two_x">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cancel"
            app:strokeColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginRight="@dimen/one_x"
            android:text="@string/cancel_label"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/one_x"
            android:id="@+id/submit"
            android:text="@string/buy_now_label"/>
    </LinearLayout>
</LinearLayout>